[package]
name = "rust-p2p-mdns"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs", "full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
async-trait = "0.1.50"
uuid = {version = "1.3.1", features = ["v4"]}
futures = "0.3.21"

